--- a/.github/workflows/ct.yaml
+++ b/.github/workflows/ct.yaml
@@ -40,5 +40,5 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
 
       - name: Run chart-testing (install)
-        run: ct install --config ct.yaml
+        run: ct install --config ct-install.yaml --excluded-charts zigbee2mqtt
 
