--- a/charts/zigbee2mqtt/templates/deployment.yaml
+++ b/charts/zigbee2mqtt/templates/deployment.yaml
@@ -45,6 +45,10 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- if .Values.zigbee2mqtt.env }}
+          env:
+{{ toYaml .Values.zigbee2mqtt.env | indent 12}}
+          {{- end }}
           # frontend expected to be running
           {{- if .Values.zigbee2mqtt.config.frontend }}
           ports:
