fix: add missing name in volume mount

--- a/charts/zigbee2mqtt/templates/deployment.yaml
+++ b/charts/zigbee2mqtt/templates/deployment.yaml
@@ -70,6 +70,7 @@ spec:
             - mountPath: /app/data
               name: data-volume
             - mountPath: {{ .Values.zigbee2mqtt.config.serial.port | default "/dev/ttyUSB0" }}
+              name: serial-device
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
