--- a/charts/mosquitto/templates/serviceaccount.yaml
+++ b/charts/mosquitto/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "dummy.serviceAccountName" . }}
+  name: {{ include "mosquitto.serviceAccountName" . }}
   labels:
-    {{- include "dummy.labels" . | nindent 4 }}
+    {{- include "mosquitto.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
