--- a/charts/mosquitto/templates/tests/test-connection.yaml
+++ b/charts/mosquitto/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "dummy.fullname" . }}-test-connection"
+  name: "{{ include "mosquitto.fullname" . }}-test-connection"
   labels:
-    {{- include "dummy.labels" . | nindent 4 }}
+    {{- include "mosquitto.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "dummy.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "mosquitto.fullname" . }}:8080/mosquitto.conf']
   restartPolicy: Never
