--- a/charts/mosquitto/templates/configmap.yaml
+++ b/charts/mosquitto/templates/configmap.yaml
@@ -5,5 +5,5 @@ metadata:
   labels:
     {{- include "mosquitto.labels" . | nindent 4 }}
 data:
-  mosquitto.conf: |-
+  mosquitto.conf: |
 {{ .Values.mosquitto.config | indent 4 }}
