--- a/charts/zigbee2mqtt/values.yaml
+++ b/charts/zigbee2mqtt/values.yaml
@@ -73,6 +73,45 @@ tolerations: []
 
 affinity: {}
 
+persistence:
+  # persistence.enabled If true, use a Persistent Volume Claim. If false, use emptyDir.
+  enabled: true
+
+  # Must match those of existing PV or dynamic provisioner
+  # Ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+  accessModes:
+    - ReadWriteOnce
+
+  # Persistent Volume Claim annotations
+  annotations: {}
+
+  # PVC must be created manually before volume will be bound
+  existingClaim: ""
+
+  # Persistent Volume size
+  #
+  size: 1Gi
+
+  ## Persistent Volume Storage Class Name
+  storageClassName: ""
+
+  # Persistent Volume Binding Mode
+  volumeBindingMode: ""
+
+  # Persistent Volume Claim Selector
+  # Useful if Persistent Volumes have been provisioned in advance
+  # Ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/#selector
+  # e.g.:
+  # selector:
+  #  matchLabels:
+  #    release: "stable"
+  #  matchExpressions:
+  #    - { key: environment, operator: In, values: [ dev ] }
+  selector: {}
+
+  # Persistent Volume Name
+  volumeName: ""
+
 zigbee2mqtt:
   # zigbee2mqtt configuration file
   # For details see https://www.zigbee2mqtt.io/guide/configuration/
