pi-hole: add additional env vars

--- a/charts/pi-hole/templates/deployment.yaml
+++ b/charts/pi-hole/templates/deployment.yaml
@@ -72,6 +72,10 @@ spec:
           env:
             - name: TZ
               value: {{ .Values.pihole.env.TZ }}
+            - name: FTL_CMD
+              value: {{ .Values.pihole.env.FTL_CMD }}
+            - name: FTLCONF_LOCAL_IPV4
+              value: {{ .Values.pihole.env.FTLCONF_LOCAL_IPV4 }}
           volumeMounts:
             - mountPath: /etc/pihole
               subPath: pihole
