--- a/charts/home-assistant/values.yaml
+++ b/charts/home-assistant/values.yaml
@@ -76,6 +76,8 @@ affinity: {}
 # Set to true to enable services like UPnP/SSDP
 hostNetwork: false
 
+dnsPolicy: Default
+
 persistence:
   # persistence.enabled If true, use a Persistent Volume Claim. If false, use emptyDir.
   enabled: false
