mount wireguard config 0600

--- a/charts/wireguard/templates/deployment.yaml
+++ b/charts/wireguard/templates/deployment.yaml
@@ -67,3 +67,4 @@ spec:
         - name: wg-config
           secret:
             secretName: "{{ .Values.wireguard.secret.name }}"
+            defaultMode: 0600
