update extra-objects to be able to include multiple templates

--- a/charts/extra-object/templates/extra-objects.yaml
+++ b/charts/extra-object/templates/extra-objects.yaml
@@ -1,1 +1,5 @@
-{{ tpl (.Values.object | toString) . }}
+{{ range .Values.templates }}
+---
+# source name: {{ .name }}
+{{ tpl ( .template | toString) $ }}
+{{ end }}
