ha: dual stack config for service

--- a/charts/home-assistant/values.yaml
+++ b/charts/home-assistant/values.yaml
@@ -37,6 +37,11 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 80
+  # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+  ipFamilyPolicy: "SingleStack"
+  # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+  ipFamilies:
+  - IPv4
   annotations: {}
 
 ingress:
