--- a/charts/pi-hole/templates/service.yaml
+++ b/charts/pi-hole/templates/service.yaml
@@ -10,6 +10,12 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
+{{- if .Values.service.ipFamilyPolicy }}
+  ipFamilyPolicy: {{ .Values.service.ipFamilyPolicy }}
+{{- end }}
+{{- if .Values.service.ipFamilies }}
+  ipFamilies: {{ toYaml .Values.service.ipFamilies | nindent 4 }}
+{{- end }}
   ports:
     - port: {{ .Values.service.ports.http }}
       targetPort: http
