--- a/charts/pi-hole/values.yaml
+++ b/charts/pi-hole/values.yaml
@@ -37,6 +37,11 @@ securityContext: {}
 service:
   type: ClusterIP
   annotations: {}
+  # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+  ipFamilyPolicy: "SingleStack"
+  # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+  ipFamilies:
+  - IPv4
   ports:
     http: 80
     dnstcp: 53
