simplified service port configuration, drop ingress

--- a/charts/home-assistant/templates/service.yaml
+++ b/charts/home-assistant/templates/service.yaml
@@ -10,16 +10,18 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
-{{- if .Values.service.ipFamilyPolicy }}
+  {{- if .Values.service.ipFamilyPolicy }}
   ipFamilyPolicy: {{ .Values.service.ipFamilyPolicy }}
-{{- end }}
-{{- if .Values.service.ipFamilies }}
+  {{- end }}
+  {{- if .Values.service.ipFamilies }}
   ipFamilies: {{ toYaml .Values.service.ipFamilies | nindent 4 }}
-{{- end }}
+  {{- end }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+  {{- range $name, $v := .Values.ports }}
+    - port: {{ $v.port }}
+      name: {{ $name }}
+      targetPort: {{ $name }}
+      protocol: {{ $v.protocol | default "TCP" | quote }}
+  {{- end }}
   selector:
     {{- include "home-assistant.selectorLabels" . | nindent 4 }}
