--- a/charts/home-assistant/templates/deployment.yaml
+++ b/charts/home-assistant/templates/deployment.yaml
@@ -42,9 +42,11 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
-            - name: http
-              containerPort: 8123
-              protocol: TCP
+          {{- range $name, $v := .Values.ports }}
+            - containerPort: {{ $v.containerPort }}
+              name: {{ $name }}
+              protocol: {{ $v.protocol | default "TCP" | quote }}
+          {{- end }}
           livenessProbe:
             httpGet:
               path: /
