--- a/charts/home-assistant/values.yaml
+++ b/charts/home-assistant/values.yaml
@@ -34,31 +34,20 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+ports:
+  http:
+    port: 80
+    containerPort: 8123
+    protocol: TCP
+
 service:
   type: ClusterIP
-  port: 80
   # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
   ipFamilyPolicy: "SingleStack"
   # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
   ipFamilies:
   - IPv4
   annotations: {}
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
