--- a/charts/pi-hole/values.yaml
+++ b/charts/pi-hole/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: pihole/pihole
+  repository: ghcr.io/pi-hole/pihole
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
