ha: update default dns policy, disable ct version check

--- a/charts/home-assistant/values.yaml
+++ b/charts/home-assistant/values.yaml
@@ -70,7 +70,7 @@ affinity: {}
 # Set to true to enable services like UPnP/SSDP
 hostNetwork: false
 
-dnsPolicy: Default
+dnsPolicy: ClusterFirst
 
 persistence:
   # persistence.enabled If true, use a Persistent Volume Claim. If false, use emptyDir.
