--- a/ct.yaml
+++ b/ct.yaml
@@ -1,5 +1,7 @@
-remote: origin
-target-branch: main
 chart-dirs:
   - charts
+excluded-charts:
+  - home-assistant
 helm-extra-args: --timeout 600s
+remote: origin
+target-branch: main
