--- a/.github/workflows/ct.yaml
+++ b/.github/workflows/ct.yaml
@@ -33,7 +33,7 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --config ct.yaml
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --config ct.yaml --check-version-increment=false
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.8.0
