--- a/renovate.json
+++ b/renovate.json
@@ -1,53 +1,72 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-     "github>toanju/renovate-config"
-  ],
-  "customManagers": [
-    {
-      "customType": "regex",
-      "description": "Update home-assistant container image references",
-      "fileMatch": ["^charts\\/home-assistant\\/Chart\\.yaml$"],
-      "matchStrings": [
-        "appVersion: \"(?<currentValue>.*?)\"\\s+",
-        "version: (?<currentValue>.*?)\\s+"
-      ],
-      "depNameTemplate": "ghcr.io/home-assistant/home-assistant",
-      "datasourceTemplate": "docker"
-    },
-    {
-      "customType": "regex",
-      "description": "Update mosquitto container image references",
-      "fileMatch": ["^charts\\/mosquitto\\/Chart\\.yaml$"],
-      "matchStrings": [
-        "appVersion: \"(?<currentValue>.*?)\"\\s+",
-        "version: (?<currentValue>.*?)\\s+"
-      ],
-      "depNameTemplate": "eclipse-mosquitto",
-      "datasourceTemplate": "docker"
-    },
-    {
-      "customType": "regex",
-      "description": "Update pi-hole container image references",
-      "fileMatch": ["^charts\\/pi-hole\\/Chart\\.yaml$"],
-      "matchStrings": [
-        "appVersion: \"(?<currentValue>.*?)\"\\s+",
-        "version: (?<currentValue>.*?)\\s+"
-      ],
-      "depNameTemplate": "ghcr.io/pi-hole/pihole",
-      "datasourceTemplate": "docker",
-      "versioningTemplate": "regex:^v?(?<major>\\d+)\\.0*(?<minor>\\d+)\\.0*(?<patch>\\d+)?$"
-    },
-    {
-      "customType": "regex",
-      "description": "Update zigbee2mqtt container image references",
-      "fileMatch": ["^charts\\/zigbee2mqtt\\/Chart\\.yaml$"],
-      "matchStrings": [
-        "appVersion: \"(?<currentValue>.*?)\"\\s+",
-        "version: (?<currentValue>.*?)\\s+"
-      ],
-      "depNameTemplate": "ghcr.io/koenkk/zigbee2mqtt",
-      "datasourceTemplate": "docker"
-    }
-  ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": [
+		"github>toanju/renovate-config"
+	],
+	"packageRules": [
+		{
+			"matchUpdateTypes": [
+				"minor",
+				"patch",
+				"pin",
+				"digest"
+			],
+			"automerge": false
+		}
+	],
+	"customManagers": [
+		{
+			"customType": "regex",
+			"description": "Update home-assistant container image references",
+			"fileMatch": [
+				"^charts\\/home-assistant\\/Chart\\.yaml$"
+			],
+			"matchStrings": [
+				"appVersion: \"(?<currentValue>.*?)\"\\s+",
+				"version: (?<currentValue>.*?)\\s+"
+			],
+			"depNameTemplate": "ghcr.io/home-assistant/home-assistant",
+			"datasourceTemplate": "docker"
+		},
+		{
+			"customType": "regex",
+			"description": "Update mosquitto container image references",
+			"fileMatch": [
+				"^charts\\/mosquitto\\/Chart\\.yaml$"
+			],
+			"matchStrings": [
+				"appVersion: \"(?<currentValue>.*?)\"\\s+",
+				"version: (?<currentValue>.*?)\\s+"
+			],
+			"depNameTemplate": "eclipse-mosquitto",
+			"datasourceTemplate": "docker"
+		},
+		{
+			"customType": "regex",
+			"description": "Update pi-hole container image references",
+			"fileMatch": [
+				"^charts\\/pi-hole\\/Chart\\.yaml$"
+			],
+			"matchStrings": [
+				"appVersion: \"(?<currentValue>.*?)\"\\s+",
+				"version: (?<currentValue>.*?)\\s+"
+			],
+			"depNameTemplate": "ghcr.io/pi-hole/pihole",
+			"datasourceTemplate": "docker",
+			"versioningTemplate": "regex:^v?(?<major>\\d+)\\.0*(?<minor>\\d+)\\.0*(?<patch>\\d+)?$"
+		},
+		{
+			"customType": "regex",
+			"description": "Update zigbee2mqtt container image references",
+			"fileMatch": [
+				"^charts\\/zigbee2mqtt\\/Chart\\.yaml$"
+			],
+			"matchStrings": [
+				"appVersion: \"(?<currentValue>.*?)\"\\s+",
+				"version: (?<currentValue>.*?)\\s+"
+			],
+			"depNameTemplate": "ghcr.io/koenkk/zigbee2mqtt",
+			"datasourceTemplate": "docker"
+		}
+	]
 }
