--- a/renovate.json
+++ b/renovate.json
@@ -53,7 +53,7 @@
 			],
 			"depNameTemplate": "ghcr.io/pi-hole/pihole",
 			"datasourceTemplate": "docker",
-			"versioningTemplate": "regex:^v?(?<major>\\d+)\\.0*(?<minor>\\d+)\\.0*(?<patch>\\d+)?$"
+			"versioningTemplate": "regex:^v?(?<major>\\d+)\\.0*(?<minor>\\d+)\\.(?<patch>\\d+)?$"
 		},
 		{
 			"customType": "regex",
