--- a/charts/pi-hole/Chart.yaml
+++ b/charts/pi-hole/Chart.yaml
@@ -23,6 +23,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
+# renovate: datasource=docker depName=ghcr.io/pi-hole/pihole
 version: 2024.1.0
 
 # This is the version number of the application being deployed. This version number should be
