--- a/charts/pi-hole/Chart.yaml
+++ b/charts/pi-hole/Chart.yaml
@@ -23,6 +23,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
+# renovate: datasource=docker depName=ghcr.io/pi-hole/pihole
 version: 2024.1.0
 
 # This is the version number of the application being deployed. This version number should be
@@ -30,4 +31,5 @@ version: 2024.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 # https://github.com/pi-hole/docker-pi-hole/releases
+# renovate: datasource=docker depName=ghcr.io/pi-hole/pihole
 appVersion: "2024.01.0"
