--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,13 @@
 				"digest"
 			],
 			"automerge": false
+		},
+		{
+			"matchDatasources": [
+				"docker"
+			],
+			"matchPackageNames": "pi-hole",
+			"versioning": "regex:^v?(?<major>\\d+)\\.0*(?<minor>\\d+)\\.(?<patch>\\d+)?$"
 		}
 	],
 	"customManagers": [
@@ -52,8 +59,7 @@
 				"version: (?<currentValue>.*?)\\s+"
 			],
 			"depNameTemplate": "ghcr.io/pi-hole/pihole",
-			"datasourceTemplate": "docker",
-			"versioningTemplate": "regex:^v?(?<major>\\d+)\\.0*(?<minor>\\d+)\\.(?<patch>\\d+)?$"
+			"datasourceTemplate": "docker"
 		},
 		{
 			"customType": "regex",
