--- a/charts/home-assistant/Chart.yaml
+++ b/charts/home-assistant/Chart.yaml
@@ -5,9 +5,10 @@ maintainers:
   - name: toanju  # Tobias Jungel
     email: toanju@users.noreply.github.com
     url: https://github.com/toanju/
-home: https://github.com/toanju/helm-charts/
+home: https://github.com/toanju/helm-charts
 sources:
-  - "https://github.com/home-assistant/core"
+  - https://github.com/toanju/helm-charts
+  - https://github.com/home-assistant/core
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -22,7 +23,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 2024.4.1
+version: 2024.4.2-beta.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
