--- a/charts/pi-hole/values.yaml
+++ b/charts/pi-hole/values.yaml
@@ -35,33 +35,27 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
-  annotations: {}
-  # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
-  ipFamilyPolicy: "SingleStack"
-  # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
-  ipFamilies:
-  - IPv4
-  ports:
-    http: 80
-    dnstcp: 53
-    dnsudp: 53
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  web:
+    type: ClusterIP
+    annotations: {}
+    # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+    ipFamilyPolicy: "SingleStack"
+    # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+    ipFamilies:
+    - IPv4
+    ports:
+      http: 80
+  dns:
+    type: ClusterIP
+    annotations: {}
+    # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+    ipFamilyPolicy: "SingleStack"
+    # see https://kubernetes.io/docs/concepts/services-networking/dual-stack/
+    ipFamilies:
+    - IPv4
+    ports:
+      dnstcp: 53
+      dnsudp: 53
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
