--- a/charts/pi-hole/templates/deployment.yaml
+++ b/charts/pi-hole/templates/deployment.yaml
@@ -24,29 +24,7 @@ spec:
       serviceAccountName: {{ include "pi-hole.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      initContainers:
-        - name: create-configs
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          command: [ 'bash', '-c', '/usr/local/bin/_startup.sh ']
-          imagePullPolicy: Always
-          envFrom:
-            - configMapRef:
-                name: {{ include "pi-hole.fullname" . }}-configmap
-          {{- if .Values.pihole.existingWebPasswordSecretName }}
-          env:
-            - name: WEBPASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.pihole.existingWebPasswordSecretName }}
-                  key: WEBPASSWORD
-          {{- end }}
-          volumeMounts:
-            - mountPath: /etc/pihole
-              subPath: pihole
-              name: data-volume
-            - mountPath: /etc/dnsmasq.d
-              subPath: dnsmasq.d
-              name: data-volume
+      initContainers: {{- toYaml .Values.initContainers | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -76,6 +54,13 @@ spec:
               value: {{ .Values.pihole.env.FTL_CMD }}
             - name: FTLCONF_LOCAL_IPV4
               value: {{ .Values.pihole.env.FTLCONF_LOCAL_IPV4 }}
+          {{- if .Values.pihole.existingWebPasswordSecretName }}
+            - name: FTLCONF_webserver_api_password
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.pihole.existingWebPasswordSecretName }}
+                  key: WEBPASSWORD
+          {{- end }}
           volumeMounts:
             - mountPath: /etc/pihole
               subPath: pihole
