pi-hole: fixup liveness probe

--- a/charts/pi-hole/templates/deployment.yaml
+++ b/charts/pi-hole/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               protocol: UDP
           livenessProbe:
             httpGet:
-              path: /admin/
+              path: /admin/login
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
