--- a/charts/home-assistant/templates/deployment.yaml
+++ b/charts/home-assistant/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "home-assistant.fullname" . }}
   labels:
-    {{- include "home-assistant.labels" . | nindent 4 }}
+   {{- include "home-assistant.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
@@ -31,6 +31,7 @@ spec:
       serviceAccountName: {{ include "home-assistant.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers: {{- toYaml .Values.initContainers | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
