--- a/charts/music-assistant/templates/deployment.yaml
+++ b/charts/music-assistant/templates/deployment.yaml
@@ -31,6 +31,7 @@ spec:
       serviceAccountName: {{ include "music-assistant.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers: {{- toYaml .Values.initContainers | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
