--- a/charts/music-assistant/templates/extra-objects.yaml
+++ b/charts/music-assistant/templates/extra-objects.yaml
@@ -1,4 +1,4 @@
-{{- range .Values.extraObjects }}
+{{ range .Values.extraObjects }}
 ---
-{{ include "music-assistant.render" (dict "value" . "context" $) }}
-{{- end }}
+{{ tpl (toYaml .) $ }}
+{{ end }}
