zigbee2mqtt: initContainers and extraObjects

--- a/charts/zigbee2mqtt/templates/deployment.yaml
+++ b/charts/zigbee2mqtt/templates/deployment.yaml
@@ -47,6 +47,9 @@ spec:
               name: data-volume
             - mountPath: /config
               name: config-volume
+      {{- with .Values.initContainers }}
+        {{- toYaml . | nindent 8 }}
+      {{- end}}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
