--- a/charts/etcd/templates/service-headless.yaml
+++ b/charts/etcd/templates/service-headless.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "etcd.fullname" . }}
+  name: {{ include "etcd.fullname" . }}-headless
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "etcd.labels" . | nindent 4 }}
